<?xml version="1.0"?>
<package format="2">
  <name>ros_opencl</name>
  <version>1.0.0</version>
  <description>The ros_opencl package offers a library for easy integration of the OpenCL library into ROS.</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>

  <url type="website">http://wiki.ros.org/ros_opencl</url>
  <url type="repository">https://github.com/gstavrinos/ros_opencl</url>
  <url type="bugtracker">https://github.com/gstavrinos/ros_opencl/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>

  <export>

  </export>
</package>
